fix push action

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -47,3 +47,5 @@ jobs:
 
       - name: push
         uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
